<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <LinearLayout
        android:padding="20dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bil1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:text="@string/bil1" />

        <EditText
            android:id="@+id/bi1EditText"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/bil21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:text="@string/bil2" />

        <EditText
            android:id="@+id/bil2EditText"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:inputType="number" />

        <Button
            android:id="@+id/tambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tambah" />
        <Button
            android:id="@+id/kurang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/kurang" />

        <Button
            android:id="@+id/bagi"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bagi" />

        <Button
            android:id="@+id/kali"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/kali" />

        <Button
            android:id="@+id/pangkat"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pangkat" />

    </LinearLayout>
</ScrollView>